# pasta-recipe

./: Cargo.toml  LICENSE  README.md
crates/parser/: Cargo.toml
crates/parser/src/: lexer.rs  lexer_test.rs  lib.rs  parser.rs  parser_lexer.rs
crates/parser/tests/: lexer.rs
crates/parser/tests/sample/: text1.pasta  text2.pasta
crates/pest_parser/: Cargo.toml
crates/pest_parser/src/: lib.rs  parser.rs  pasta.pest
crates/pest_parser/tests/: simple_test.rs  talk.pasta  talk.rs
