[package]
name = "pasta_parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
logos.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
lalrpop-util.workspace = true

[build-dependencies]
lalrpop.workspace = true
