[package]
name = "pasta_parser_pest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
pest = "2.5.7"
pest_derive = "2.5.7"

